<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moe_detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <FrameLayout
        android:id="@+id/moe_backdrop_container"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/moe_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/moe_backdrop"
            android:scaleType="centerCrop"
            tools:src="@drawable/preview_backdrop_yofukashi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_shape"
            android:backgroundTint="?android:attr/colorBackground" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/moe_card_cover_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toBottomOf="@+id/moe_backdrop_container"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/moe_card_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/moe_detail_cover"
                android:maxHeight="150dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/preview_yofukashi" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/moe_card_cover_container"
        app:layout_constraintLeft_toRightOf="@+id/moe_card_cover_container"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/moe_detail_title"
            style="@style/textAppearanceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/moe_detail_title"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Yofukashi no Uta" />

        <TextView
            android:id="@+id/moe_detail_author"
            style="@style/textBodyPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:text="@string/moe_detail_title"
            android:textSize="14sp"
            android:alpha="0.6"
            tools:text="Author" />

        <TextView
            android:id="@+id/moe_detail_status"
            style="@style/textBodyPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/moe_detail_title"
            android:textSize="14sp"
            tools:text="Ongoing" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/moe_description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="vertical"
        android:paddingHorizontal="17dp"
        app:layout_constraintTop_toBottomOf="@+id/moe_card_cover_container">

        <TextView
            android:id="@+id/moe_detail_description_title"
            style="@style/textAppearanceTitle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moe_detail_description_title"
            android:textSize="17sp"
            tools:text="Description" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/moe_detail_description"
                    style="@style/textBodyPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:text="@string/sample_text"
                    android:textSize="14sp" />
                <View
                    android:id="@+id/moe_detail_description_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="@id/moe_detail_description"
                    app:layout_constraintBottom_toBottomOf="@id/moe_detail_description"
                    android:background="@drawable/gradient_shape"
                    android:backgroundTint="?android:attr/colorBackground" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/moe_detail_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moe_description_container">
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Shounen" />
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Comedy" />
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Romance" />
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Romance" />
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Romance" />
        <com.google.android.material.chip.Chip
            style="@style/MoeChipGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_width="wrap_content"
            tools:text="Romance" />
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="17dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/moe_detail_genres">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textAppearanceTitle"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="Characters List"
            tools:ignore="HardcodedText" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moe_detail_characters_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:itemCount="10"
            tools:listitem="@layout/moe_character_item" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>